--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ a {
 	bottom: -1px;
 	z-index: -1;
 	height: 8px;
-	background: #54ed39
+	background: #878787
 }
 
 .header__link:last-child {
@@ -169,7 +169,7 @@ a {
 	top: -155px;
 	width: 50vw;
 	height: 900px;
-	background: rgba(146, 242, 255, .15);
+	background: rgba(203, 212, 214, 0.15);
 	z-index: -1
 }
 
@@ -197,7 +197,7 @@ a {
 	right: -177px;
 	width: 550px;
 	height: 359px;
-	background: rgba(251, 254, 93, .8);
+	background: rgba(255, 255, 255, 0.9);
 	padding: 50px;
 	font-size: 24px;
 	font-weight: 300;
